# implementacion_dagster

./: README.md  pyproject.toml
dagster_university/dagster_models/: keras_dot_product_model.keras
dagster_university/dagster_university/: __init__.py  project.py
dagster_university/dagster_university/assets/: dbt.py  model_helper.py  train_model.py
dagster_university/dagster_university/resources/: __init__.py
dagster_university/mlruns/0/: meta.yaml
dagster_university/mlruns/0/0f3c2a3cd5ab4f29b2ec547e188d51db/: meta.yaml
dagster_university/mlruns/0/110f584ce08a4b72a1133cc56fb162fc/: meta.yaml
dagster_university/mlruns/0/11a92bbab43b4c9d843969f6f96d342b/: meta.yaml
dagster_university/mlruns/0/20b622cb4d574f49adb163463b11d09a/: meta.yaml
dagster_university/mlruns/0/2d8784b46463429fb60b96ff18cfee96/: meta.yaml
dagster_university/mlruns/0/3477c95df4654b32927e1ebca8b5d745/: meta.yaml
dagster_university/mlruns/0/3490c47865a243a8b17c65a00f9ff3f4/: meta.yaml
dagster_university/mlruns/0/36557ebfb7d5478db29dab6977085de8/: meta.yaml
dagster_university/mlruns/0/64fdb6677eb1416f977f38b1ee9b1caf/: meta.yaml
dagster_university/tmp15tgs365/history/: runs.db
dagster_university/tmp15tgs365/schedules/: schedules.db
dagster_university/tmpfsktw0um/history/: runs.db
dagster_university/tmpfsktw0um/schedules/: schedules.db
dagster_university/tmpsx6j7gsd/history/: runs.db
dagster_university/tmpsx6j7gsd/schedules/: schedules.db
tmpva73wl77/history/: runs.db
tmpva73wl77/history/runs/: index.db
tmpva73wl77/schedules/: schedules.db
(+82 files in other folders)
